# yaak

./: package-lock.json  启动.txt
.github/workflows/: ci.yml  release-fork-overwrite.yml
crates-tauri/yaak-app/src/: error.rs  lib.rs  updates.rs
crates/yaak/: Cargo.toml
crates/yaak-git/bindings/: gen_models.ts
crates/yaak-http/src/: client.rs  manager.rs
crates/yaak-models/bindings/: gen_models.ts
crates/yaak-models/migrations/: 20260418000000_request-proxy.sql  20260418010000_remove-legacy-yaak-user-agent.sql  20260418020000_request-no-follow-redirects.sql
crates/yaak/src/: render.rs  send.rs
src-web/: package.json
src-web/commands/: commands.tsx  openSettings.tsx
src-web/components/: EncryptionHelp.tsx  EnvironmentActionsDropdown.tsx  FolderLayout.tsx  GeneratedRequestCode.tsx  GrpcRequestPane.tsx  HeadersEditor.tsx  HttpRequestLayout.tsx  HttpRequestPane.tsx  HttpResponsePane.tsx  HttpResponseTimeline.tsx  RecentHttpResponsesDropdown.tsx  RequestBodyViewer.tsx  RequestCryptoPanel.tsx  ResponseHeaders.tsx  SelectFile.tsx  SettingsDropdown.tsx  Sidebar.tsx  SyncToFilesystemSetting.tsx  WebsocketRequestPane.tsx  Workspace.tsx  WorkspaceActionsDropdown.tsx  WorkspaceEncryptionSetting.tsx  WorkspaceHeader.tsx  WorkspaceSettingsDialog.tsx
src-web/hooks/: useAuthTab.tsx  useCheckForUpdates.tsx  useCreateDropdownItems.tsx  useHeadersTab.tsx  useHotKey.ts  useResponseBodyText.ts
src-web/lib/: atoms.ts  buildUrlFromParameters.ts  i18n.ts  initGlobalListeners.tsx  reveal.ts  setupOrConfigureEncryption.tsx  tauri.ts
tasks/: lessons.md  todo.md
(+24 files in other folders)
