[package]
name = "yaak"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
log = { workspace = true }
md5 = "0.8.0"
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "net", "time"] }
yaak-http = { workspace = true }
yaak-crypto = { workspace = true }
yaak-models = { workspace = true }
yaak-plugins = { workspace = true }
yaak-templates = { workspace = true }
yaak-tls = { workspace = true }

[dev-dependencies]
tempfile = "3"
